UI: Hardcode internal scale container coordinate space to prevent sub-element clipping

--- a/frontend-next/styles/index.css
+++ b/frontend-next/styles/index.css
@@ -1443,6 +1443,8 @@ input[type="range"]::-webkit-slider-thumb:hover {
 }
 
 .story-scale-container > div {
+  width: 400px;
+  height: 711px;
   transform: scale(0.85);
   transform-origin: top left;
   border-radius: 28px;
